# rs3-plugin-altitude-agpl

./: .gitignore  Makefile  README.md  altitude_enricher.py  core_distance.py  pyproject.toml
docker/: docker-compose.altitude.yml
rs3_plugin_altitude_agpl/: plugin.py
rs3_plugin_altitude_agpl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
service/: Dockerfile  app.py  bench_curl.sh  requirements.txt
service/config/: altitude_compare.yaml  altitude_ign.yaml  altitude_rge1.yaml  altitude_rge5.yaml  altitude_srtm.yaml  altitude_srtm30.yaml  altitude_srtm90.yaml
src/rs3_plugin_altitude_agpl/: README.md  __init__.py  altitude_service.py  client.py  enrich.py  factory.py  local.py  plugin.py  plugin.py.bak  slope.py
src/rs3_plugin_altitude_agpl/config/: defaults.yaml
src/rs3_plugin_altitude_agpl/providers/: __init__.py  base.py  ign_rgealti.py  srtm.py
src/rs3_plugin_altitude_agpl/schema_fragments/: altitude.yaml
src/rs3_plugin_altitude_agpl/tests/: compare_providers.py  test_altitude_service_smoke.py  test_factory.py
src/rs3_plugin_altitude_agpl/tests/data/: points_from_yaml.csv  points_tests.csv
src/rs3_plugin_altitude_agpl/tools/: grade_10hz.py  run_benchmark_10hz.py
